[package]
name = "wordle"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
atty = "0.2"
serde_json = "1.0"
console = "0.15"

rand = "0.8.5"
text_io = "0.1.12"
clap = { version = "4.3.9", features = ["derive"] }
serde = { version = "1.0.164", features = ["derive"] }
serde_derive = "1.0.164"
colored = "2.0.0"
anyhow = { version = "1", features = ["backtrace"] }
tui = "0.19.0"
crossterm = "0.26.1"
rayon = "1.7.0"
fltk = "^1.4"
chrono = "0.4.35"

[dev-dependencies]
lazy_static = "1.4"
assert-json-diff = "2.0"
ntest = "0.9"
pretty_assertions = "1.3"
